foreach(FUZZER_NAME IN ITEMS shapefuzzer mapfuzzer configfuzzer)
    if(FUZZER)
        add_executable(${FUZZER_NAME} ${FUZZER_NAME}.c)
        target_compile_options(${FUZZER_NAME} PRIVATE -Wall -Wextra -Werror=format-security)
        target_include_directories(${FUZZER_NAME} PRIVATE ${PROJECT_SOURCE_DIR})
        target_link_libraries(${FUZZER_NAME} ${MAPSERVER_LIBMAPSERVER})
    else()
        set(FUZZER_REPRODUCER "${FUZZER_NAME}_reproducer")
        add_executable(${FUZZER_REPRODUCER} ${FUZZER_NAME}.c reproducer_main.cpp)
        target_include_directories(${FUZZER_REPRODUCER} PRIVATE ${PROJECT_SOURCE_DIR})
        target_link_libraries(${FUZZER_REPRODUCER} ${MAPSERVER_LIBMAPSERVER})
    endif()
endforeach()
